# diceman

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.beads/: issues.jsonl
crates/diceman/: Cargo.toml
crates/diceman-cli/: Cargo.toml
crates/diceman-cli/src/: main.rs
crates/diceman-py/: Cargo.toml  pyproject.toml
crates/diceman-py/src/: lib.rs
crates/diceman/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  roller.rs  sim.rs
docs/plans/: 2025-12-22-compounding-explode-design.md  2025-12-22-compounding-explode-impl.md  2025-12-22-penetrating-explode-design.md  2025-12-22-penetrating-explode-impl.md
