[package]
name = "diceman-py"
description = "Python bindings for diceman dice notation library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "diceman"
crate-type = ["cdylib"]

[dependencies]
diceman.workspace = true
pyo3.workspace = true
