[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "diceman"
version = "0.1.0"
description = "A dice notation parser and roller for TTRPGs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment :: Role-Playing",
]
keywords = ["dice", "ttrpg", "rpg", "dnd", "roll20"]

[project.urls]
Homepage = "https://github.com/jsnitsel/diceman"
Repository = "https://github.com/jsnitsel/diceman"

[tool.maturin]
features = ["pyo3/extension-module"]
